// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interaction snapshots > Enter selects the highlighted task and opens edit TUI 1`] = `
"                                                                                
  Edit Task MRKL-001                                                            
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Status            todo                                                        
  Title           Auth epic                                                     
  Description     ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/status  Ctrl+N newline  Enter submit  Esc quit     "
`;

exports[`interaction snapshots > Tab key switches between Tasks and Archive 1`] = `
" Tasks   [Archive]                                                              
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-099    closed    Old feature                    │ MRKL-099 feat closed     
                                            │ Old feature                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
1/1 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > arrow down moves selection to next task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      Auth epic                      │ MRKL-002 fix in-progress 
MRKL-002    in-progre…Fix login bug                  │ Fix login bug            
MRKL-003    todo      Auth tests                     │                          
MRKL-004    done      Update CI config               │                          
MRKL-005    todo      Dashboard layout               │                          
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > arrow up moves selection back to previous task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      Auth epic                      │ MRKL-001 feat todo       
MRKL-002    in-progre…Fix login bug                  │ Auth epic                
MRKL-003    todo      Auth tests                     │                          
MRKL-004    done      Update CI config               │                          
MRKL-005    todo      Dashboard layout               │                          
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > initial render shows task list with first item selected 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      Auth epic                      │ MRKL-001 feat todo       
MRKL-002    in-progre…Fix login bug                  │ Auth epic                
MRKL-003    todo      Auth tests                     │                          
MRKL-004    done      Update CI config               │                          
MRKL-005    todo      Dashboard layout               │                          
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > typing characters filters the task list 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      Auth epic                      │ MRKL-001 feat todo       
MRKL-002    in-progre…Fix login bug                  │ Auth epic                
MRKL-003    todo      Auth tests                     │                          
MRKL-004    done      Update CI config               │                          
MRKL-005    todo      Dashboard layout               │                          
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > archive tab active snapshot at 80 cols 1`] = `
" Tasks   [Archive]                                                              
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-020    closed    Archived feature               │ MRKL-020 feat closed     
MRKL-021    done      Old bugfix                     │ Archived feature         
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
2/2 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > basic task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      Add user authentication        │ MRKL-001 feat todo       
├─MRKL-004    todo      Design dashboard layout        │ Add user authentication
MRKL-002    in-progre…Fix login redirect bug         │                          
MRKL-003    done      Update CI pipeline config      │ Relationships            
MRKL-005    in-progre…Refactor token validation      │   Children: MRKL-004     
MRKL-006    todo      Write integration tests        │                          
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
6/6 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > blocking indicators snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-010    todo      🚧 MRKL-011, MRKL-01…Database migration             │ MRKL-
010 feat todo                                                                   
MRKL-011    todo      🛑 MRKL-01…API endpoints                  │ Database migrat
ion                                                                             
MRKL-012    todo      🛑 MRKL-01…Frontend integration           │                
                                            │ Relationships                     
                                            │   Blocks: MRKL-011, MRKL-012      
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────"
`;

exports[`render snapshots > empty task list snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
>                                       
──────────────────────┬─────────────────
ID          STATUS    TITLE             
             │ Preview                  
──────────────────────┼─────────────────
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
──────────────────────┴─────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  En"
`;

exports[`render snapshots > empty task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > empty task list snapshot at 120 cols 1`] = `
"[Tasks]   Archive                                                                                                       
                                                                                                                        
>                                                                                                                       
──────────────────────────────────────────────────────────────────┬─────────────────────────────────────────────────────
ID          STATUS                 TITLE                          │ Preview                                             
──────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
──────────────────────────────────────────────────────────────────┴─────────────────────────────────────────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search                                          "
`;

exports[`render snapshots > epic grouping snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo      Auth epic                      │ MRKL-001 feat todo       
├─MRKL-002    in-progre…Login page                     │ Auth epic              
├─MRKL-003    todo      Token refresh                  │                        
MRKL-004    done      Fix CI pipeline                │ Relationships            
MRKL-005    todo      Update README                  │   Children: MRKL-002, MRK
L-003                                                                           
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > scroll offset snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                          │ Preview                  
────────────────────────────────────────────┼───────────────────────────────────
MRKL-004    todo      Task number 4                  │ MRKL-006 chore done      
MRKL-005    in-progre…Task number 5                  │ Task number 6            
MRKL-006    done      Task number 6                  │                          
MRKL-007    todo      Task number 7                  │                          
MRKL-008    in-progre…Task number 8                  │                          
MRKL-009    done      Task number 9                  │                          
MRKL-010    todo      Task number 10                 │                          
MRKL-011    in-progre…Task number 11                 │                          
MRKL-012    done      Task number 12                 │                          
MRKL-013    todo      Task number 13                 │                          
MRKL-014    in-progre…Task number 14                 │                          
MRKL-015    done      Task number 15                 │                          
MRKL-016    todo      Task number 16                 │                          
MRKL-017    in-progre…Task number 17                 │                          
MRKL-018    done      Task number 18                 │                          
────────────────────────────────────────────┴───────────────────────────────────
20/20 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search"
`;

exports[`render snapshots > title truncation snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
>                                       
──────────────────────┬─────────────────
ID          STATUS    TITLE             
             │ Preview                  
──────────────────────┼─────────────────
MRKL-001    todo      Implement user aut
hentication… │ MRKL-001 feat todo       
MRKL-002    in-progre…Fix critical produ
ction datab… │ Implement user authentica
tion with OAuth2 and SAML               
MRKL-003    done      Refactor legacy no
tification … │                          
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 "
`;
